# treewidth-heuristic-using-clique-graphs

./: .gitignore  Cargo.toml  README.md
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
clique_graph_treewidth_heuristic/: Cargo.toml
clique_graph_treewidth_heuristic/src/: find_maximum_cliques.rs  generate_partial_k_tree.rs  lib.rs
clique_graph_treewidth_heuristic_benchmarks/: Cargo.toml
clique_graph_treewidth_heuristic_benchmarks/src/: main.rs
dimacs_benchmarks/: Cargo.toml
dimacs_benchmarks/benchmark_results/: dimacs_results.txt
dimacs_benchmarks/src/: lib.rs  main.rs
dimacs_graphs/color/: LAST_UPDATE_Dec13  LAST_UPDATE_Dec13.BAK  contents.tex  contents.tex.BAK  index.html.tmp  index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=S;O=A  index.html?C=S;O=D
k_tree_benchmarks/: Cargo.toml
k_tree_benchmarks/benchmark_results/: k_tree_results.txt
k_tree_benchmarks/src/: main.rs
src/: algorithms.rs  check_tree_decomposition.rs  clique_graph_edge_weight_functions.rs  compute_treewidth_upper_bound.rs  construct_clique_graph.rs  fill_bags_along_paths.rs  fill_bags_while_generating_mst.rs  find_maximal_cliques.rs  find_maximum_cliques.rs  find_path_in_tree.rs  generate_partial_k_tree.rs  lib.rs  main.rs  maximum_minimum_degree_heuristic.rs
src/algorithms/: construct_clique_graph.rs  fill_bags_along_path.rs  fill_bags_along_paths.rs  find_maximum_cliques.rs  find_path_in_tree.rs  find_width_of_tree_decomposition.rs  generate_partial_k_tree.rs  maximum_minimum_degree_heuristic.rs  minimum_maximum_degree_heuristic.rs
treewidth_heuristic/: Cargo.toml
treewidth_heuristic/src/: check_tree_decomposition.rs  clique_graph_edge_weight_heuristics.rs  compute_treewidth_upper_bound.rs  construct_clique_graph.rs  fill_bags_along_paths.rs  fill_bags_while_generating_mst.rs  find_connected_components.rs  find_maximum_cliques.rs  find_path_in_tree.rs  find_width_of_tree_decomposition.rs  generate_partial_k_tree.rs  lib.rs  maximum_minimum_degree_heuristic.rs
