[workspace]

members = [
    "treewidth_heuristic",
    "dimacs_benchmarks",
    "k_tree_benchmarks"
]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3