[package]
name = "treewidth-heuristic-using-clique-graphs"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
authors = ["Raoul Luque <raoulsluque@gmail.com>"]
description = "A heuristic for calculating an upper bound on the treewidth of graphs using clique graphs"
repository = "https://github.com/RaoulLuque/treewidth-heuristic-clique-graph"

[dependencies]
petgraph = "0.6.4"
itertools = "0.13"
rand = "0.8.5"
rustc-hash = { version ="2.0.0", git = "https://github.com/rust-lang/rustc-hash"}
log = "0.4.21"
csv = "1.3.0"
