[package]
name = "treewidth_heuristic"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
authors = ["Raoul Luque <raoulsluque@gmail.com>"]
description = "A heuristic for calculating an upper bound on treewidth of graphs using clique-graphs"
repository = "https://github.com/RaoulLuque/treewidth-heuristic-clique-graph"


[dependencies]
petgraph = "0.6.4"
itertools = "0.12.1"
rand = "0.8.5"